2005-10-09  Johan Dahlin  <johan@gnome.org>

	* kiwi/__init__.py:
	* kiwi/dist.py:
	* kiwi/environ.py:
	* kiwi/ui/wizard.py:
	* setup.py:

	Add infrastructure for handling installed/uninstalled mode.
	Introduces Library and Application instances in kiwi.environ.
	Add distutils helpers. Use environ.Library in for kiwi itself (yay
	dogfooding). Remove old hack in wizard.
	
2005-10-08  Johan Dahlin  <johan@gnome.org>

	* kiwi/argcheck.py (argcheck.__call__): 
	Check so the number of arguments are equal before checking 
	default values, so the user can get a useful exception

	* tests/test_argcheck.py (ArgTest.method2): Add a 
	few more tests.

2005-10-07  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py (DataTypeProperty.save): 
	Do not show editor for Radio/Check, they're always boolean.

2005-10-06  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List.refresh): New method.

2005-09-30  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/comboboxentry.py (BaseComboBoxEntry): A 
	reimplementation of GtkComboBoxEntry in python. The main difference
	between this one and the gtk+ one is that we put our own
	entry (a kiwi entry) instead of the standard one, which allows
	us to do put an icon in the right part, used by the validation.
	
	* kiwi/ui/widgets/tooltips.py (Tooltip.__init__): Add a tooltips 
	implementation, which is a bit more flexible than the one in Gtk+. 
	Currently unused.

	* tests/test_argcheck.py (ArgTest.testUserDefined): Add some basic
	tests.

	* kiwi/argcheck.py: Move in decorator from fiscalprinter.
	Add some additional tests and support for checking default values.

2005-09-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py: 
	(List): do not save iterator in instance, save the iterators
	in a local table.
	
	* kiwi/ui/widgets/list.py:
	(List.count, List.index, List.extend): Add
	(List.insert, List.pop, List.reverse, List.sort): Add stubs
	(List.append, List.remove, List.update): Rename